[tool.poetry]
name = "hexlerp"
version = "0.1.0"
description = ""
authors = ["Marie Roald <roald.marie@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.1"
black = "^23.3.0"
pytest-randomly = "^3.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
